--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-three/drei": "^9.50.3",
     "@react-three/fiber": "^8.9.2",
     "@react-three/postprocessing": "^2.15.1",
+    "leva": "^0.9.35",
     "r3f-perf": "^6.6.3",
     "react": "18.2",
     "react-dom": "18.2",
